# shopscout

./: .gitignore  CHANGELOG.md  README.md  pyproject.toml
.github/workflows/: ci.yml
.superpowers/brainstorm/1348-1776329029/: .server-stopped  architecture-approaches.html  dashboard-layout.html  waiting.html
Reviewer/: response.html  test_no_country.py  test_review.py  test_scrape.py
docs/superpowers/plans/: 2026-04-16-shopify-reviewer-plan.md
docs/superpowers/specs/: 2026-04-16-shopify-reviewer-design.md
src/shopifyscrape/: __init__.py  _http.py  _parsers.py  client.py  exceptions.py  exporter.py  models.py
src/shopifyscrape/api/: app.py  deps.py
src/shopifyscrape/api/routes/: collections.py  products.py  store.py
src/shopifyscrape/cli/: app.py  output.py
src/shopifyscrape/cli/commands/: collections.py  products.py  serve.py  store.py
src/shopscout/: __init__.py  _endpoints.py  _http.py  _parsers.py  client.py  exceptions.py  exporter.py  models.py
src/shopscout/api/: app.py  deps.py  schemas.py
src/shopscout/api/routes/: collections.py  products.py  store.py
src/shopscout/cli/: app.py  output.py
src/shopscout/cli/commands/: collections.py  products.py  serve.py  store.py
tests/: test_endpoints.py  test_main.py  test_models.py  test_parsers.py
