[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "shopscout"
version = "0.1.0"
description = "Scrape any Shopify store — products, collections, pages & metadata from the public JSON API. SDK + CLI + REST API."
readme = "README.md"
license = "MIT"
requires-python = ">=3.10"
authors = [{ name = "Muhammad Zaid" }]
keywords = [
    "shopify", "scraper", "products", "collections", "ecommerce",
    "shopify-api", "shopify-scraper", "store", "sdk",
    "cli", "rest-api", "no-api-key",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Topic :: Internet :: WWW/HTTP",
    "Topic :: Software Development :: Libraries :: Python Modules",
    "Environment :: Console",
    "Operating System :: OS Independent",
    "Typing :: Typed",
]
dependencies = [
    "requests>=2.28.0",
]

[project.urls]
Homepage = "https://github.com/zaidkx37/shopifyscrape"
Repository = "https://github.com/zaidkx37/shopifyscrape"
Issues = "https://github.com/zaidkx37/shopifyscrape/issues"

[project.optional-dependencies]
cli = ["click>=8.0", "rich>=13.0"]
api = ["fastapi>=0.100.0", "uvicorn[standard]>=0.20.0"]
all = ["shopscout[cli,api]"]
dev = [
    "pytest>=7.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
]

[project.scripts]
shopifyscrape = "shopifyscrape.cli.app:main"

[tool.hatch.build.targets.wheel]
packages = ["src/shopifyscrape"]

[tool.ruff]
target-version = "py310"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "SIM"]

[tool.mypy]
python_version = "3.10"
check_untyped_defs = true
no_implicit_optional = true

[[tool.mypy.overrides]]
module = "shopifyscrape.api.*"
ignore_errors = true

[tool.pytest.ini_options]
testpaths = ["tests"]
